--- a/styles/MobileMenu.module.scss
+++ b/styles/MobileMenu.module.scss
@@ -1,19 +1,23 @@
 .mobMenuBtn {
-    width: 55px;
-    height: 45px;
+    position: relative;
+    width: 44px;
+    height: 38px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-image 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &::before {
             content: "";
             position: absolute;
-            top: 15px;
-            right: 15px;
-            width: 46px;
-            height: 40px;
+            top: 0px;
+            right: 0px;
+            width: 44px;
+            height: 38px;
             background-size: cover;
             background-image: url("/mob-menu-icon.svg");
         }
-    &:hover::before{
+    &:hover::before, &:focus::before{
         background-image: url("/mob-menu-icon-hover.svg");
     }
 
