--- a/app/[locale]/globals.scss
+++ b/app/[locale]/globals.scss
@@ -10,11 +10,13 @@
     --background-color-header-footer: rgba(255, 168, 0, 0.85);
     --background-color-mob-menu: rgba(255, 168, 0, 0.55);
     --box-shadow-color-header-footer: rgba(184, 125, 10, 0.40);
+
 }
 
 
 body {
     color: var(--color-primary-text);
+    font-family: var(--font-primary);
     font-size: 16px;
     line-height: 1.22;
     background-image: url('/food-fon.png');
@@ -55,7 +57,7 @@ img {
     display: block;
 }
 
-.section__title {
+.sectionTitle {
     position: relative;
     width: 100%;
     max-width: 450px;
@@ -71,11 +73,11 @@ img {
         width: 100%;
         height: 2px;
         border-radius: 25px;
-        background-color: var(--color-titles-line);
+        background-color: var(--color-titles-section);
 
     }
 
-    font-family: var(--font-family-titles);
+    font-family: var(--font-titles);
     font-size: 18px;
     color: var(--color-titles-section);
     margin-bottom: 15px;
@@ -108,7 +110,7 @@ img {
         font-size: 17px;
     }
 
-    .section__title {
+    .sectionTitle {
         max-width: 768px;
         font-size: 24px;
         margin-bottom: 20px;
@@ -135,7 +137,7 @@ img {
         padding: 45px 0px;
     }
 
-    .section__title {
+    .sectionTitle {
         max-width: 1000px;
         font-size: 26px;
         margin-bottom: 25px;
@@ -165,7 +167,7 @@ img {
         width: 1160px;
     }
 
-    .section__title {
+    .sectionTitle {
         max-width: 1200px;
 
         &::after {
@@ -185,7 +187,7 @@ img {
         padding: 35px 0px;
     }
 
-    .section__title {
+    .sectionTitle {
         max-width: 1440px;
         font-size: 30px;
         margin-bottom: 30px;
