--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -33,80 +33,107 @@
     &:focus {
         transform: scale(1.1);
     }
-}
 
-.heroLinkGreenland {
+&Greenland {
     top: 2%;
     left: 29.5%;
 }
 
-.heroLinkNA {
+&NA {
     top: 20%;
     left: 13%;
 }
 
-.heroLinkSA {
+&SA {
     top: 46.5%;
     left: 25.1%;
 }
 
-.heroLinkAfrica {
+&Africa {
     top: 36.5%;
     left: 47%;
 }
 
-.heroLinkEurope {
+&Europe {
     top: 17%;
     left: 55%;
 }
 
-.heroLinkAsia {
+&Asia {
     top: 21%;
     left: 75%;
 }
 
-.heroLinkAU {
+&AU {
     top: 55.7%;
     left: 76.7%;
+}
+}
+
+.aboutList {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+
+    font-size: 15px;
+    color: var(--color-primary-text);
+
+
+    &Item {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 10px;
+    }
+
+}
+
+.aboutListIcon {
+    width: 40px;
+    height: 40px;
 }
 
 @media screen and (min-width: 410px) {
     .heroLink {
         font-size: 9px;
         font-weight: 600;
-    }
 
-        .heroLinkGreenland {
+        &Greenland {
             top: 2.8%;
             left: 30.5%;
         }
     
-        .heroLinkNA {
+        &NA {
             top: 21.5%;
             left: 14%;
         }
     
-        .heroLinkSA {
+        &SA {
             top: 50%;
             left: 26%;
         }
     
-        .heroLinkAfrica {
+        &Africa {
             top: 38.5%;
         }
     
-        .heroLinkEurope {
+        &Europe {
             top: 19%;
         }
     
-        .heroLinkAsia {
+        &Asia {
             top: 23%;
         }
     
-        .heroLinkAU {
+        &AU {
             top: 59.7%;
             left: 77.7%;
         }
+    }
+    .aboutList {
+        font-size: 16px;
+    }
 }
 @media screen and (min-width:460px) {
 
@@ -192,6 +219,24 @@
             left: 78.5%;
         }
     }
+
+    .aboutList {
+            height: 470px;
+    
+            font-size: 16px;
+            flex-direction: column;
+            flex-wrap: wrap;
+            gap: 20px;
+    
+            &Item {
+                width: 355px;
+            }
+    
+            &Icon {
+                width: 45px;
+                height: 45px;
+            }
+    }
 }
 
 @media screen and (min-width:1000px) {
@@ -236,6 +281,20 @@
             top: 69.5%;
         }
     }
+         .aboutList {
+             height: 460px;
+             font-size: 18px;
+             gap: 20px;
+    
+             &Item {
+                 width: 460px;
+             }
+    
+             &Icon {
+                 width: 50px;
+                 height: 50px;
+             }
+         }
 }
 
 @media screen and (min-width:1200px) {
@@ -283,6 +342,21 @@
         }
 
     }
+    
+    .aboutList {
+             font-size: 20px;
+             gap: 25px;
+             height: 465px;
+    
+             &Item {
+                 width: 555px;
+             }
+    
+             &Icon {
+                 width: 55px;
+                 height: 55px;
+             }
+    }
 }
 
 @media screen and (min-width:1440px) {
@@ -328,4 +402,18 @@
             top: 60%;
         }
     }
+         .aboutList {
+             font-size: 22px;
+             gap: 30px;
+    
+             &Item {
+                 width: 665px;
+             }
+    
+             &Icon {
+                 width: 60px;
+                 height: 60px;
+             }
+         }
+
 }
