--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -94,6 +94,41 @@
     height: 40px;
 }
 
+  .authorList {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+  }
+
+  .authorTextParagraph {
+      display: block;
+      margin-top: 10px;
+  }
+
+  .authorImage {
+      display: block;
+      width: 100%;
+      height: auto;
+      margin-top: 10px;
+      border-radius: 25px;
+      box-shadow: 3px 6px 10px 0px var(--color-shadow);
+
+  }
+
+  .authorTextSocialLink {
+      font-weight: 700;
+      color: var(--color-primary-text);
+      transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+      &:hover,
+      &:focus {
+        color: transparent;
+            background-clip: text;
+            background-image: var(--hover-gradient);
+          
+      }
+  }
+
 @media screen and (min-width: 410px) {
     .heroLink {
         font-size: 9px;
@@ -221,7 +256,7 @@
     }
 
     .aboutList {
-            height: 470px;
+            height: 576px;
     
             font-size: 16px;
             flex-direction: column;
@@ -230,6 +265,7 @@
     
             &Item {
                 width: 355px;
+                height: 273px;
             }
     
             &Icon {
@@ -281,13 +317,15 @@
             top: 69.5%;
         }
     }
-         .aboutList {
-             height: 460px;
+    
+    .aboutList {
+             height: 556px;
              font-size: 18px;
              gap: 20px;
     
              &Item {
                  width: 460px;
+                height: 263px;
              }
     
              &Icon {
@@ -295,6 +333,31 @@
                  height: 50px;
              }
          }
+
+        .authorText {
+            font-size: 16px;
+            width: 530px;
+        }
+    
+        .authorList {
+            gap: 20px;
+        }
+    
+        .authotListItem {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+    
+            &:first-child {
+                flex-direction: row-reverse;
+            }
+        }
+    
+        .authorImage {
+            width: 420px;
+            height: 300px;
+            margin: 0;
+        }
 }
 
 @media screen and (min-width:1200px) {
@@ -346,17 +409,35 @@
     .aboutList {
              font-size: 20px;
              gap: 25px;
-             height: 465px;
+             height: 520px;
     
              &Item {
                  width: 555px;
+                 height: 244px;
              }
     
              &Icon {
                  width: 55px;
                  height: 55px;
              }
+
     }
+    .aboutBoldText{
+        font-family: var(--font-logo);
+    }
+
+         .authorText {
+             font-size: 18px;
+             width: 630px;
+         }
+    
+         .authorImage {
+             width: 500px;
+             height: 350px;
+             border-radius: 50px;
+         }
+
+       
 }
 
 @media screen and (min-width:1440px) {
@@ -415,5 +496,18 @@
                  height: 60px;
              }
          }
+
+        .authorText {
+            font-size: 22px;
+            width: 800px;
+    
+            line-height: 1.13;
+        }
+    
+        .authorImage {
+            width: 570px;
+            height: 380px;
+            object-fit: cover;
+        }
 
 }
