--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -129,6 +129,54 @@
       }
   }
 
+  .travelList {
+      margin-top: 20px;
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      gap: 15px;
+      align-items: center;
+  }
+
+  .travelTitle {
+      font-family: var(--font-titles);
+      text-align: center;
+      font-size: 22px;
+      text-transform: uppercase;
+      text-shadow: 0px 5px 5px var(--color-shadow);
+  }
+
+  .travelLinkContainer{
+    width: 270px;
+    border-radius: 50px;
+    background: var(--icons-gradient);
+    transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover, &:focus {
+        background: var(--color-primary-text);
+    }
+  }
+
+  .travelLink {
+      display: block;
+      padding: 20px;
+      border: 1px solid var(--color-border);
+      color: var(--color-primary-text);
+      border-radius: 50px;
+      text-align: center;
+      font-weight: 800;
+      font-size: 18px;
+      
+      transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+            background-image 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+      &:hover,
+      &:focus {
+            color: transparent;
+            background-clip: text;
+            background-image: var(--hover-gradient);
+      }
+  }
+
 @media screen and (min-width: 410px) {
     .heroLink {
         font-size: 9px;
@@ -273,6 +321,16 @@
                 height: 45px;
             }
     }
+
+         .travelList {
+             flex-direction: row;
+             gap: 40px;
+             margin-top: 25px;
+         }
+
+         .travelTitle{
+            font-size: 24px;
+         }
 }
 
 @media screen and (min-width:1000px) {
@@ -358,6 +416,27 @@
             height: 300px;
             margin: 0;
         }
+
+         .travelList {
+             gap: 80px;
+             margin-top: 30px;
+         }
+
+        .travelLinkContainer{
+                width: 323px;
+            }
+    
+         .travelLink {
+             font-size: 22px;
+             width: 270px;
+             padding: 25px;
+             border-radius: 40px;
+             border: 2px solid var(--color-border);
+         }
+    
+         .travelTitle {
+             font-size: 28px;
+         }
 }
 
 @media screen and (min-width:1200px) {
@@ -437,7 +516,26 @@
              border-radius: 50px;
          }
 
-       
+        .travelList {
+            gap: 100px;
+            margin-top: 40px;
+        }
+
+                .travelLinkContainer {
+                    width: 423px;
+                    border-radius: 65px;
+                }
+    
+        .travelLink {
+            font-size: 25px;
+            width: 350px;
+            padding: 35px;
+            border-radius: 65px;
+        }
+    
+        .travelTitle {
+            font-size: 40px;
+        }
 }
 
 @media screen and (min-width:1440px) {
@@ -510,4 +608,24 @@
             object-fit: cover;
         }
 
+                .travelList {
+                    gap: 140px;
+                    margin-top: 45px;
+                }
+
+                .travelLinkContainer {
+                     width: 473px;
+                    border-radius: 80px;
+                }
+        
+                .travelLink {
+                    font-size: 32px;
+                    width: 390px;
+                    padding: 40px;
+                    border-radius: 80px;
+                }
+        
+                .travelTitle {
+                    font-size: 45px;
+                }
 }
