--- a/app/[locale]/globals.scss
+++ b/app/[locale]/globals.scss
@@ -2,7 +2,8 @@
     --color-primary-text: rgb(90, 3, 25);
     --color-titles-section: rgb(130, 3, 25);
     --color-hero-text: rgba(90, 3, 25, 0.90);
-    --icons-gradient: linear-gradient(rgba(196, 194, 61, 0.85), rgba(251, 152, 3, 0.85));
+    --icons-gradient: linear-gradient(180deg, rgba(196, 194, 61, 0.85), rgba(251, 152, 3, 0.85));
+    --color-hero-title: rgba(255, 168, 0);
     --hover-gradient: linear-gradient(180deg, rgba(5, 177, 95, 0.90) 0%, rgba(255, 251, 3, 0.90) 100%);
     --color-shadow: rgba(90, 3, 25, 0.25);
     --color-border: #5A0319;
