--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -1,5 +1,6 @@
 .header {
     background-color: #ffffff;
+    z-index: 100;
     width: 100%;
     box-shadow: 0px 10px 10px 0px var(--box-shadow-color-header-footer);
 }
