all continents hero-sec

--- a/app/[locale]/globals.scss
+++ b/app/[locale]/globals.scss
@@ -4,7 +4,9 @@
     --color-hero-text: rgba(90, 3, 25, 0.90);
     --icons-gradient: linear-gradient(180deg, rgba(196, 194, 61, 0.85), rgba(251, 152, 3, 0.85));
     --color-hero-title: rgba(255, 168, 0);
-    --hover-gradient: linear-gradient(180deg, rgba(5, 177, 95, 0.90) 0%, rgba(255, 251, 3, 0.90) 100%);
+    --color-continent-title: rgba(255, 168, 0, 0.80);
+    --color-continents-titles-gradient: linear-gradient(to bottom, rgb(251, 152, 3), rgb(255, 248, 1));
+    --hover-gradient: linear-gradient(to bottom, rgba(5, 177, 95, 0.90) 0%, rgba(255, 251, 3, 0.90) 100%);
     --color-shadow: rgba(90, 3, 25, 0.25);
     --color-border: #5A0319;
 
