countries list of the continnets

--- a/app/[locale]/globals.scss
+++ b/app/[locale]/globals.scss
@@ -9,7 +9,7 @@
     --hover-gradient: linear-gradient(to bottom, rgba(5, 177, 95, 0.90) 0%, rgba(255, 251, 3, 0.90) 100%);
     --color-shadow: rgba(90, 3, 25, 0.25);
     --color-border: #5A0319;
-
+    --color-bg-countries: rgba(90, 3, 25, 0.55);
     --background-color-primary: rgba(245, 242, 142, 0.10);
     --background-color-header-footer: rgba(255, 168, 0, 0.85);
     --background-color-mob-menu: rgba(255, 168, 0, 0.55);
