--- a/app/[locale]/globals.scss
+++ b/app/[locale]/globals.scss
@@ -2,10 +2,11 @@
     --color-primary-text: rgb(90, 3, 25);
     --color-titles-section: rgb(130, 3, 25);
     --color-hero-text: rgba(90, 3, 25, 0.90);
-    --icons-gradient: linear-gradient(180deg, rgba(196, 194, 61, 0.85), rgba(251, 152, 3, 0.85));
+    --icons-gradient: linear-gradient(180deg, rgba(196, 194, 61, 0.95), rgba(251, 152, 3, 0.95));
     --color-hero-title: rgba(255, 168, 0);
     --color-continent-title: rgba(255, 168, 0, 0.80);
     --color-continents-titles-gradient: linear-gradient(to bottom, rgb(251, 152, 3), rgb(255, 248, 1));
+    --color-hover-text: linear-gradient(to bottom, rgb(95, 201, 9), rgb(251, 189, 4));
     --hover-gradient: linear-gradient(to bottom, rgba(5, 177, 95, 0.90) 0%, rgba(255, 251, 3, 0.90) 100%);
     --color-shadow: rgba(90, 3, 25, 0.25);
     --color-border: #5A0319;
