--- a/styles/DishesOfCountryList.module.scss
+++ b/styles/DishesOfCountryList.module.scss
@@ -1,31 +1,23 @@
-.countriesList {
+.dishesList {
     display: flex;
     flex-direction: column;
     gap: 15px;
     margin-top: 20px;
 }
 
-.countriesLink {
+.dishesLink {
     position: relative;
     display: block;
     transform-origin: center;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
     &:hover,
-        &:focus {
-            transform: scale(1.04);
-        }
+    &:focus {
+        transform: scale(1.04);
+    }
 }
 
-.countriesImage {
-    width: 100%;
-    height: 255px;
-    object-fit: cover;
-    border-radius: 25px;
-    box-shadow: 3px 3px 5px 0px var(--color-shadow);
-
-}
-
-.countriesNameContainer { 
+.dishesNameContainer {
     display: block;
     position: absolute;
     bottom: 0px;
@@ -36,105 +28,126 @@
     border-bottom-right-radius: 25px;
     background-color: var(--color-bg-countries);
 }
-.countriesName {
+
+.dishesImg {
+    width: 100%;
+    height: 255px;
+    object-fit: cover;
+    border-radius: 25px;
+    box-shadow: 3px 3px 5px 0px var(--color-shadow);
+}
+
+.dishesName {
+    position: absolute;
+    bottom: 0;
+    left: 0;
 
     display: flex;
     justify-content: center;
     align-items: center;
-     
+
     height: 55px;
     width: 100%;
 
+    
     color: transparent;
     background-clip: text;
     background-image: var(--color-continents-titles-gradient);
     font-family: var(--font-titles);
     font-weight: 600;
+    font-family: var(--font-titles);
     font-size: 21px;
     text-transform: uppercase;
 }
 
 @media screen and (min-width:768px) {
-    .countriesList {
+    .dishesList {
         flex-direction: row;
         flex-wrap: wrap;
         gap: 20px;
         margin-top: 30px;
     }
 
-    .countriesImage {
+    .dishesImg {
         width: 355px;
         height: 245px;
         border-radius: 30px;
     }
 
-    .countriesName {
+    .dishesNameContainer{
+        height: 65px;
+    }
+
+    .dishesName {
         height: 65px;
         border-bottom-left-radius: 30px;
         border-bottom-right-radius: 30px;
         font-size: 24px;
+    }
 
-    }
-    .countriesNameContainer {
-        height: 65px;
-    }
+
 }
 
 @media screen and (min-width:1000px) {
-    .countriesList {
+    .dishesList {
         gap: 30px;
         margin-top: 35px;
     }
 
-    .countriesImage {
+    .dishesImg {
         width: 300px;
         height: 205px;
-
     }
 
-    .countriesName {
+    .dishesName {
         font-size: 26px;
     }
+
+
 }
 
 @media screen and (min-width:1200px) {
-    .countriesList {
+    .dishesList {
         gap: 35px;
         margin-top: 40px;
     }
 
-    .countriesImage {
+    .dishesImg {
         width: 363px;
         height: 245px;
         border-radius: 35px;
     }
-    .countriesNameContainer {
-        border-bottom-left-radius: 35px;
-        border-bottom-right-radius: 35px;
+    .dishesNameContainer{
+         border-bottom-left-radius: 35px;
+         border-bottom-right-radius: 35px;
     }
 
-    .countriesName {
+    .dishesName {
         font-size: 28px;
+
     }
+
+
 }
 
 @media screen and (min-width:1440px) {
-    .countriesList {
+    .dishesList {
         gap: 45px;
     }
 
-    .countriesImage {
+    .dishesImg {
         width: 433px;
         height: 285px;
-
     }
 
-    .countriesNameContainer {
+   .dishesNameContainer {
             height: 75px;
     }
 
-    .countriesName {
+    .dishesName {
         height: 75px;
         font-size: 31px;
     }
+
+
 }
