--- a/styles/ToggleButtons.module.scss
+++ b/styles/ToggleButtons.module.scss
@@ -18,6 +18,7 @@
     width: 190px;
     border-radius: 13px;
     border: 0.5px solid var(--color-primary-text);
+    box-shadow: 3px 3px 5px 0px var(--color-shadow);
     background: var(--icons-gradient);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
