--- a/app/[locale]/globals.scss
+++ b/app/[locale]/globals.scss
@@ -2,6 +2,7 @@
     --color-primary-text: rgb(90, 3, 25);
     --color-titles-section: rgb(130, 3, 25);
     --color-hero-text: rgba(90, 3, 25, 0.90);
+    --color-placeholder: rgb(130, 3, 25, 0.70);
     --icons-gradient: linear-gradient(180deg, rgba(196, 194, 61, 0.95), rgba(251, 152, 3, 0.95));
     --color-hero-title: rgba(255, 168, 0);
     --color-continent-title: rgba(255, 168, 0, 0.80);
