--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -12,6 +12,7 @@
     gap: 5px;
     font-size: 12px;
     font-weight: 500;
+    transition: border-bottom 250ms cubic-bezier(0.4, 0, 0.2, 1);
     &Link{
        color: #ffffff;
 
@@ -21,7 +22,7 @@
     }
 }
 
-.navList, .authList{
+.navList{
     display: none;
 }
 
@@ -46,7 +47,7 @@
     height: 46px;
     font-size: 20px;
     color: var(--color-primary-text);
-    transition: background-image 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-clip 250ms cubic-bezier(0.4, 0, 0.2, 1), background-image 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
     &DecorWord {
         margin-left: 68px;
@@ -60,6 +61,7 @@
                height: 46px;
                background-size: cover;
                background-image: url("/logo-icon.svg");
+             transition: background-image 250ms cubic-bezier(0.4, 0, 0.2, 1);
            }
         &:hover,
         &:focus {
@@ -76,46 +78,6 @@
  
 }
 
-
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
-
-.dropdown-content {
-    position: absolute;
-    top: 25px;
-    left: 0;
-    visibility: hidden;
-    pointer-events: none;
-    opacity: 0;
-    background-color: #ffffff;
-    min-width: 100%;
-    transition: opacity 0.3s ease, visibility 0.3s ease;
-}
-
-.dropdown-content__link {
-    display: block;
-    color: var(--color-primary-titles);
-    transition: color 0.3s ease;
-
-    &:hover,
-    &:focus {
-        color: var(--color-hover-text);
-    }
-}
-
-.dropdown-content__item {
-    position: relative;
-    padding: 10px 5px 5px 15px;
-    background-color: var(--background-color-header-footer);
-}
-
-.dropdown:hover .dropdown-content {
-    opacity: 1;
-    visibility: visible;
-    pointer-events: auto;
-}
 
 @media screen and (min-width:768px) {
     .headerLogo {
@@ -165,7 +127,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        gap: 12px;
+        gap: 15px;
         font-size: 16px;
         font-weight: 500;
 
@@ -190,55 +152,6 @@
 
     }
 
-
-    .authList{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 5px;
-
-        &Link{
-            position: relative;
-            color: var(--color-primary-text);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            gap: 3px;
-            transition: background-image 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-            font-size: 14px;
-
-            &::before{
-                content: "";
-                position: absolute;
-                top: 2px;
-                left: -17px;
-                width: 14px;
-                height: 14px;
-                background-size: cover;
-            }
-
-            &Auth::before{
-                background-image: url("/login-icon.svg");
-            }
-            &Register::before{
-                background-image: url("/register-icon.svg");
-            }
-            
-                &:hover,
-                &:focus {
-                    color: transparent;
-                    background-clip: text;
-                    background-image: var(--hover-gradient);
-                }
-                &Auth:hover::before{
-                    background-image: url("/login-icon-hover.svg");
-                }
-                &Register:hover::before{
-                    background-image: url("/register-icon-hover.svg");
-                }
-        }
-
-    }
 
     .loginIcon, .registerIcon {
         fill: currentColor;
@@ -273,21 +186,9 @@
                 margin-left: 85px;
             }
     }
-    .authList {
-        gap: 10px;
+   
 
-        &Link::before{
-            width: 16px;
-            height: 16px;
-            left: -20px;
-            top: 3px;
-        }
-    }
-
-    .authListLink{
-        font-size: 16px;
-    }
-
+   
 }
 
 @media screen and (min-width:1440px) {
