--- a/styles/AuthForm.module.scss
+++ b/styles/AuthForm.module.scss
@@ -82,6 +82,14 @@
     margin-top: 30px;
     text-align: center;
 }
+.loggedInText{
+    text-align: center;
+    margin-top: 35px;
+    font-weight: 500;
+}
+  .login__btn__container {
+      margin-bottom: 60px;
+  }
 
 @media screen and (min-width:1000px) {
     .auth__form {
@@ -110,6 +118,18 @@
     .auth__btn {
         padding: 12px;
     }
+
+        .loggedInText {
+            width: 600px;
+            margin: 0 auto;
+            text-align: center;
+            margin-top: 55px;
+            font-weight: 500;
+        }
+
+        .login__btn__container{
+            margin-bottom: 90px;
+        }
 
 }
 
@@ -145,4 +165,16 @@
         font-size: 18px;
         padding: 15px;
     }
+
+                .loggedInText {
+                    width: 660px;
+                    margin: 0 auto;
+                    text-align: center;
+                    margin-top: 65px;
+                    font-weight: 500;
+                }
+        
+                .login__btn__container {
+                    margin-bottom: 100px;
+                }
 }
