--- a/styles/CookTechnology.module.scss
+++ b/styles/CookTechnology.module.scss
@@ -34,18 +34,18 @@
     gap: 12px;
 }
 
-.cook__item{
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+// .cook__item{
+//     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
-        &:hover,
-        &:focus {
-            font-weight: 600;
-            color: transparent;
-            background-clip: text;
-            background-image: var(--color-hover-text);
-            transform: scale(1.02);
-        }
-}
+//         &:hover,
+//         &:focus {
+//             font-weight: 600;
+//             color: transparent;
+//             background-clip: text;
+//             background-image: var(--color-hover-text);
+//             transform: scale(1.02);
+//         }
+// }
 
 
 @media screen and (min-width:768px) {
