--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -2,6 +2,7 @@
     background-color: #ffffff;
     z-index: 100;
     width: 100%;
+    height: 110px;
     box-shadow: 0px 10px 10px 0px var(--box-shadow-color-header-footer);
 }
 
@@ -28,52 +29,65 @@
 
 .bgContainer {
     width: 100%;
-    padding: 15px 0px;
+    height: 100%;
     background-color: var(--background-color-header-footer);
 }
-
 
 .headerNav {
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
-
+.logo__blur{
+    position: absolute;
+    top: 0;
+    left: -5px;
+    width: 130px;
+    height: 110px;
+}
+.logo{
+z-index: 101;
+}
 .headerLogo {
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 46px;
+    height: 110px;
     font-size: 20px;
+   
     color: var(--color-primary-text);
     transition: background-clip 250ms cubic-bezier(0.4, 0, 0.2, 1), background-image 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    // &DecorLogo{
+    //     height: 100px;
+    // }
     
-    &DecorWord {
-        margin-left: 68px;
-    }
-           &::after {
-               content: "";
-               position: absolute;
-               top: 0px;
-               right: 64px;
-               width: 65px;
-               height: 46px;
-               background-size: cover;
-               background-image: url("/logo-icon.svg");
-             transition: background-image 250ms cubic-bezier(0.4, 0, 0.2, 1);
-           }
-        &:hover,
-        &:focus {
-    color: transparent;
-    background-clip: text;
-    background-image: var(--hover-gradient);
-       }  
-    &:hover::after,
-    &:focus::after {
-         background-image: url("/logo-icon-hover.svg");
+    // &DecorWord {
+    //     margin-left: 68px;
+    // }
+    //        &::after {
+    //            content: "";
+    //            position: absolute;
+    //            top: 0px;
+    //            right: 64px;
+    //            width: 105px;
+    //            height: 95px;
+    //            background-size: cover;
+    //            background-image: url("/logo-3x.png");
+    //          transition: background-image 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    //        }
+    //     &:hover,
+    //     &:focus {
+    // color: transparent;
+    // background-clip: text;
+    // background-image: var(--hover-gradient);
+    //    }  
+    // &:hover::after,
+    // &:focus::after {
+    //      background-image: url("/logo-icon-hover.svg");
         
-    }
+    // }
 
  
 }
@@ -125,9 +139,12 @@
 
     .navList {
         display: flex;
+        flex-wrap: wrap;
         justify-content: center;
         align-items: center;
-        gap: 15px;
+        padding: 7px;
+        gap: 17px;
+        width: 450px;
         font-size: 16px;
         font-weight: 500;
 
@@ -209,8 +226,8 @@
     &::after {
             top: 0px;
             right: 128px;
-            width: 84px;
-            height: 60px;
+            width: 120px;
+            height: 110px;
     
         }
     
@@ -238,7 +255,6 @@
     }
 
 }
-
 
 @media screen and (min-width:1000px) {
     .current {
