--- a/styles/CookTechnology.module.scss
+++ b/styles/CookTechnology.module.scss
@@ -1,5 +1,5 @@
 .cook__container{
-    padding: 12px 5px;
+    padding: 12px 12px;
     border-radius: 25px;
         margin-top: 15px;
         background: var(--background-color-primary);
@@ -8,17 +8,18 @@
 }
 
 .cook__title{
+    position: relative;
   font-size: 18px;
   font-family: var(--font-titles);
    color: var(--color-titles-section);  
   &::after {
         content: '';
         position: absolute;
-        top: 38px;
-        left: 10px;
+        top: 24px;
+        left: 0px;
         transform: translateY(50%);
         display: block;
-        width: calc(100% - 20px);
+        width: 100%;
         height: 2px;
         border-radius: 25px;
         background-color: var(--color-titles-section);
@@ -50,7 +51,7 @@
 
 @media screen and (min-width:768px) {
    .cook__container{
-    padding: 15px 7px;
+    padding: 15px 15px;
    }
 
    .cook__list{
@@ -58,39 +59,36 @@
     gap: 15px;
    }
    .cook__title {
-
        font-size: 20px;
        &::after {
-            top: 47px;
-            left: 7px
+            top: 32px;
         }
    }
 }
 
 @media screen and (min-width:1000px) {
     .cook__container {
-        padding: 20px 10px;
+        padding: 20px 20px;
     }
     .cook__list {
+        margin-top: 22px;
         font-size: 20px;
         gap: 18px;
     }
     
     .cook__title {
         font-size: 21px;
-        &::after {
-                top: 50px;
-                left: 10px
-            }
+
     }
 }
 
 @media screen and (min-width:1200px) {
    .cook__container {
-        padding: 25px 15px;
+        padding: 25px;
     }
 
     .cook__list {
+        margin-top: 28px;
         font-size: 22px;
         gap: 20px;
     }
@@ -98,8 +96,7 @@
     .cook__title {
         font-size: 23px;
         &::after {
-                top: 57px;
-                left: 15px
+                top: 37px;
             }
     }
 
