--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -2,7 +2,7 @@
     background-color: #ffffff;
     z-index: 100;
     width: 100%;
-    height: 110px;
+    height: 125px;
     box-shadow: 0px 10px 10px 0px var(--box-shadow-color-header-footer);
 }
 
@@ -35,33 +35,43 @@
 
 .headerNav {
     display: flex;
-    justify-content: space-around;
     align-items: center;
+    justify-content: space-around;
+    // gap: 57px;
 }
-.logo__blur{
-    position: absolute;
-    top: 0;
-    left: -5px;
-    width: 130px;
-    height: 110px;
-}
+
 .logo{
-z-index: 101;
-}
+    position: relative;
+     z-index: 101;
+
+  }
+
 .headerLogo {
     position: relative;
+
+    height: 125px;
+    font-size: 22px;
     display: flex;
-    justify-content: center;
     align-items: center;
-    height: 110px;
-    font-size: 20px;
-   
+
     color: var(--color-primary-text);
     transition: background-clip 250ms cubic-bezier(0.4, 0, 0.2, 1), background-image 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    // &DecorLogo{
-    //     height: 100px;
-    // }
+    &::after {
+            content: "";
+            position: absolute;
+            top: 18px;
+            left: -18px;
+            width: 120px;
+            height: 120px;
+            background-image: url("/logo-blur.svg");
+            background-repeat: no-repeat;}
+    
+            
+    &DecorWord{
+        width: 80px;
+       display: block;
+    }
     
     // &DecorWord {
     //     margin-left: 68px;
@@ -77,12 +87,10 @@ z-index: 101;
     //            background-image: url("/logo-3x.png");
     //          transition: background-image 250ms cubic-bezier(0.4, 0, 0.2, 1);
     //        }
-    //     &:hover,
-    //     &:focus {
-    // color: transparent;
-    // background-clip: text;
-    // background-image: var(--hover-gradient);
-    //    }  
+        &:hover,
+        &:focus {
+   transform: scale(1.1);
+       }  
     // &:hover::after,
     // &:focus::after {
     //      background-image: url("/logo-icon-hover.svg");
@@ -90,6 +98,10 @@ z-index: 101;
     // }
 
  
+}
+.headerLogo__GuideWord{
+
+    text-align: end;
 }
 
 
