--- a/styles/NutritionValues.module.scss
+++ b/styles/NutritionValues.module.scss
@@ -11,19 +11,19 @@
     font-size: 18px;
     font-family: var(--font-titles);
     color: var(--color-titles-section);
-    &::after {
-            content: '';
-            position: absolute;
-            top: 38px;
-            left: 10px;
-            transform: translateY(50%);
-            display: block;
-            width: calc(100% - 20px);
-            height: 2px;
-            border-radius: 25px;
-            background-color: var(--color-titles-section);
+    // &::after {
+    //         content: '';
+    //         position: absolute;
+    //         top: 38px;
+    //         left: 10px;
+    //         transform: translateY(50%);
+    //         display: block;
+    //         width: calc(100% - 20px);
+    //         height: 2px;
+    //         border-radius: 25px;
+    //         background-color: var(--color-titles-section);
     
-        }
+    //     }
 }
 
 .nutritional__list {
@@ -69,10 +69,10 @@
     .nutritional__section_title {
         font-size: 20px;
 
-        &::after{
-            top: 47px;
-            left:7px
-        }
+        // &::after{
+        //     top: 47px;
+        //     left:7px
+        // }
     }
 }
 
@@ -89,10 +89,10 @@
     .nutritional__section_title {
         font-size: 21px;
 
-        &::after {
-                top: 50px;
-                left: 10px
-            }
+        // &::after {
+        //         top: 50px;
+        //         left: 10px
+        //     }
     }
     .nutritional__text{
         margin-left: 10px;
@@ -111,10 +111,10 @@
 
     .nutritional__section_title {
         font-size: 23px;
-        &::after {
-                top: 57px;
-                left: 15px
-            }
+        // &::after {
+        //         top: 57px;
+        //         left: 15px
+        //     }
     }
 
          .nutritional__text {
