--- a/styles/FavoriteList.module.scss
+++ b/styles/FavoriteList.module.scss
@@ -1,3 +1,8 @@
+.favList__text{
+    margin-top: 25px;
+    text-align: center;
+}
+
 .recipes__list {
     display: flex;
     flex-direction: column;
@@ -17,7 +22,7 @@
     }
 }
 
-.recipes__item{
+.recipes__item {
     position: relative;
 }
 
@@ -58,6 +63,42 @@
     font-weight: 600;
     font-size: 21px;
     text-transform: uppercase;
+}
+
+.deleteBtn__container {
+    position: absolute;
+    top: 0;
+    right: 15px;
+
+    backdrop-filter: blur(2.2px);
+    margin: 15px auto 0px auto;
+
+}
+
+.deleteBtn {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 12px 33px 12px 16px;
+
+    color: var(--color-fav-btn);
+    border: 1px solid var(--color-fav-btn);
+    background-color: var(--color-bg-countries);
+    box-shadow: 3px 5px 5px 0px var(--color-shadow);
+    border-radius: 25px;
+    cursor: pointer;
+
+    &::after {
+        content: '';
+        position: absolute;
+        top: 10px;
+        right: 7px;
+        width: 20px;
+        height: 20px;
+        background-image: url("/fav.svg");
+        background-repeat: no-repeat;
+    }
 }
 
 @media screen and (min-width:768px) {
