--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -1,8 +1,6 @@
 .header {
-    background-color: #ffffff;
-    z-index: 100;
     width: 100%;
-    height: 125px;
+    height: 110px;
     box-shadow: 0px 10px 10px 0px var(--box-shadow-color-header-footer);
 }
 
@@ -10,7 +8,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 5px;
+    gap: 10px;
     font-size: 12px;
     font-weight: 500;
     transition: border-bottom 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -37,96 +35,64 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
-    // gap: 57px;
+    gap: 18px;
 }
 
-.logo{
-    position: relative;
-     z-index: 101;
-
-  }
 
 .headerLogo {
     position: relative;
-
-    height: 125px;
-    font-size: 22px;
+    height: 110px;
+    font-size: 18px;
     display: flex;
     align-items: center;
-
     color: var(--color-primary-text);
-    transition: background-clip 250ms cubic-bezier(0.4, 0, 0.2, 1), background-image 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    &::after {
-            content: "";
-            position: absolute;
-            top: 18px;
-            left: -18px;
-            width: 120px;
-            height: 120px;
-            background-image: url("/logo-blur.svg");
-            background-repeat: no-repeat;}
-    
-            
     &DecorWord{
         width: 80px;
-       display: block;
+        display: block;
     }
     
-    // &DecorWord {
-    //     margin-left: 68px;
-    // }
-    //        &::after {
-    //            content: "";
-    //            position: absolute;
-    //            top: 0px;
-    //            right: 64px;
-    //            width: 105px;
-    //            height: 95px;
-    //            background-size: cover;
-    //            background-image: url("/logo-3x.png");
-    //          transition: background-image 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    //        }
-        &:hover,
-        &:focus {
-   transform: scale(1.1);
-       }  
-    // &:hover::after,
-    // &:focus::after {
-    //      background-image: url("/logo-icon-hover.svg");
-        
-    // }
-
+    &:hover, &:focus {
+          transform: scale(1.05);
+    }  
  
 }
 .headerLogo__GuideWord{
+    margin-left: 10px;
+}
 
-    text-align: end;
+@media screen and (min-width:375px) {
+    .header {
+        height: 135px;
+    }
+    .headerLogo{
+        height: 135px;
+        font-size: 23px;
+    }
+    .headerNav{
+        gap: 22px;
+    }
+    .logo{
+        width: 130px;
+        height: 130px;
+    }
+    .headerLogo__GuideWord {
+        margin-left: 13px;
+    }
+    .locale{
+        font-size: 15px;
+        font-weight: 600;
+        gap: 10px;
+    }
 }
 
 
 @media screen and (min-width:768px) {
-    .headerLogo {
-        width: 250px;
-        height: 50px;
-        font-size: 24px;
-
-        &::after{
-            top: 0px;
-            right: 82px;
-            width: 70px;
-            height: 50px;
-
-        }
-            
-        &DecorWord {
-            margin-left: 76px;
-        }
-    }
-
-    .locale{
-        margin-left: 300px;
-    }
+ 
+ .headerNav{
+    gap: 130px;
+ }
 }
 
 
@@ -137,16 +103,22 @@
     }
 
     .locale{
-        margin: 0;
-    }
-
-    .dropdown-content {
         font-size: 16px;
     }
-
+    .header{
+        height: 150px;
+    }
+    .headerLogo{
+        height: 150px;
+        font-size: 25px;
+    }
+    .logo{
+      width: 140px;
+      height: 140px;
+    }
     .headerNav {
         justify-content: start;
-        gap: 25px;
+        gap: 45px;
     }
 
     .navList {
@@ -155,9 +127,10 @@
         justify-content: center;
         align-items: center;
         padding: 7px;
-        gap: 17px;
+        row-gap: 15px;
+        column-gap: 25px;
         width: 450px;
-        font-size: 16px;
+        font-size: 18px;
         font-weight: 500;
 
         &Link {
@@ -181,72 +154,41 @@
 
     }
 
-
-    .loginIcon, .registerIcon {
-        fill: currentColor;
-    }
-
 }
 
 @media screen and (min-width:1200px) {
-    .headerNav {
-        gap: 35px;
-    }
 
+    .headerNav{
+        gap: 90px;
+    }
     .navList {
-        gap: 20px;
-        font-size: 18px;
-    }
-
-    .headerLogo {
-        width: 310px;
-        height: 55px;
-        font-size: 32px;
-
-        &::after {
-                top: 0px;
-                right: 105px;
-                width: 77px;
-                height: 55px;
-        
-            }
-        
-            &DecorWord {
-                margin-left: 85px;
-            }
+        width: 500px;
+        column-gap: 30px;
     }
    
-
    
 }
 
 @media screen and (min-width:1440px) {
     .headerNav {
-        gap: 60px;
+        gap: 150px;
     }
-
+    .locale{
+        font-size: 18px;
+        gap: 15px;
+    }
+    .headerLogo{
+        font-size: 28px;
+        width: 250px;
+    }
+    .logo{
+        width: 140px;
+        height: 140px;
+    }
     .navList {
-        gap: 20px;
         font-size: 20px;
     }
 
-    .headerLogo {
-        width: 360px;
-        height: 60px;
-        font-size: 36px;
-
-    &::after {
-            top: 0px;
-            right: 128px;
-            width: 120px;
-            height: 110px;
-    
-        }
-    
-        &DecorWord {
-            margin-left: 88px;
-        }
-    }
 }
 
 .current {
