--- a/styles/MobileMenu.module.scss
+++ b/styles/MobileMenu.module.scss
@@ -1,7 +1,7 @@
 .mobMenuBtn {
     position: relative;
-    width: 60px;
-    height: 52px;
+    width: 50px;
+    height: 44px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -12,8 +12,8 @@
             position: absolute;
             top: 0px;
             right: 0px;
-            width: 60px;
-            height: 52px;
+            width: 50px;
+            height: 44px;
             background-size: cover;
             background-image: url("/mob-menu-icon.svg");
         }
@@ -163,6 +163,18 @@
 
 .mobileMenu.open {
     right: 0;
+}
+
+@media screen and (min-width:375px){
+   
+    .mobMenuBtn{
+        width: 60px;
+        height: 52px;
+        &::before{
+            width: 60px;
+            height: 52px;
+        }
+    }
 }
 
 @media screen and (min-width:768px) {
