fix styles favBtn

--- a/styles/RecipeList.module.scss
+++ b/styles/RecipeList.module.scss
@@ -8,6 +8,7 @@
 }
 
 .recipeContainer {
+    position: relative;
         padding: 15px 10px;
         border-radius: 25px;
         margin-top: 15px;
