--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -499,16 +499,17 @@
         }
 
         &NA {
-            top: 23%;
+            left: 15%;
+            top: 21%;
         }
 
         &SA {
-            top: 50.5%;
+            top: 48.5%;
             left: 28%;
         }
 
         &Africa {
-            top: 40%;
+            top: 37%;
         }
 
         &Europe {
@@ -521,7 +522,8 @@
         }
 
         &AU {
-            top: 60%;
+            left: 78.5%;
+            top: 58%;
         }
     }
          .aboutList {
@@ -541,8 +543,6 @@
         .authorText {
             font-size: 22px;
             width: 800px;
-    
-            line-height: 1.13;
         }
     
         .authorImage {
