--- a/app/[locale]/globals.scss
+++ b/app/[locale]/globals.scss
@@ -1,52 +1,73 @@
 :root {
-    --color-primary-text: rgb(90, 3, 25);
-    --color-titles-section: rgb(130, 3, 25);
-    --color-hero-text: rgba(90, 3, 25, 0.90);
-    --color-placeholder: rgb(130, 3, 25, 0.70);
-    --icons-gradient: linear-gradient(180deg, rgba(196, 194, 61, 0.95), rgba(251, 152, 3, 0.95));
-    --color-hero-title: rgba(255, 168, 0);
-    --color-continent-title: rgba(255, 168, 0, 0.80);
-    --color-continents-titles-gradient: linear-gradient(to bottom, rgb(251, 152, 3), rgb(255, 248, 1));
-    --color-hover-text: linear-gradient(to bottom, rgb(95, 201, 9), rgb(251, 189, 4));
-    --hover-gradient: linear-gradient(to bottom, rgba(5, 177, 95, 0.90) 0%, rgba(255, 251, 3, 0.90) 100%);
-    --color-shadow: rgba(90, 3, 25, 0.25);
-    --color-border: #5A0319;
-    --color-bg-countries: rgba(90, 3, 25, 0.55);
-    --color-fav-btn: rgb(245, 242, 142);
-    --background-color-primary: rgba(245, 242, 142, 0.15);
-    --background-color-header-footer: rgba(255, 168, 0);
-    --background-color-mob-menu: rgba(255, 168, 0, 0.85);
-    --box-shadow-color-header-footer: rgba(184, 125, 10, 0.50);
+  --color-primary-text: rgb(90, 3, 25);
+  --color-titles-section: rgb(130, 3, 25);
+  --color-hero-text: #820319;
+  --color-placeholder: rgb(130, 3, 25, 0.7);
+  --icons-gradient: linear-gradient(
+    180deg,
+    rgba(196, 194, 61, 0.95),
+    rgba(251, 152, 3, 0.95)
+  );
+  --color-hero-title: rgba(255, 168, 0);
+  --color-continent-title: rgba(255, 168, 0, 0.8);
+  --color-continents-titles-gradient: linear-gradient(
+    to bottom,
+    rgb(251, 152, 3),
+    rgb(255, 248, 1)
+  );
+  --color-hover-text: linear-gradient(
+    to bottom,
+    rgb(95, 201, 9),
+    rgb(251, 189, 4)
+  );
+  --hover-gradient: linear-gradient(
+    to bottom,
+    rgba(5, 177, 95, 0.9) 0%,
+    rgba(255, 251, 3, 0.9) 100%
+  );
+  --color-shadow: rgba(90, 3, 25, 0.25);
+  --color-border: #5a0319;
+  --color-bg-countries: rgba(90, 3, 25, 0.55);
+  --color-fav-btn: rgb(245, 242, 142);
+  --background-color-primary: rgba(245, 242, 142, 0.2);
+  --background-color-header-footer: rgba(255, 168, 0);
+  --background-color-mob-menu: rgba(255, 168, 0, 0.85);
+  --box-shadow-color-header-footer: rgba(184, 125, 10, 0.5);
 
+  --transition: border-bottom 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    transform 250ms cubic-bezier(0.87, 0.2, 0.21, 0.76),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1), background 250ms cubic-bezier(0.4, 0, 0.2, 1), background-image 250ms cubic-bezier(0.4, 0, 0.2, 1), background-clip 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  --lang-color: #ffffff;
+  --main-title-gradient: linear-gradient(to bottom, #FFF801, #FB9803);
+  --ligth-primary-color: #F5F28E;
 }
 
-
 body {
-    color: var(--color-primary-text);
-    font-family: var(--font-primary);
-    font-size: 16px;
-    line-height: 1.3;
-    background-image: url('/food-fon.png');
-    background-color: var(--background-color-primary);
-    background-size: 375px 290px;
-    margin: 0;
+  color: var(--color-primary-text);
+  font-family: var(--font-primary);
+  font-size: 15px;
+  line-height: 1.3;
+  background-image: url("/food-fon.png");
+  background-color: var(--background-color-primary);
+  background-size: 375px 290px;
+  margin: 0;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 button {
-    border: 0;
-    background-color: transparent;
-    padding: 0;
-    margin: 0;
+  border: 0;
+  background-color: transparent;
+  padding: 0;
+  margin: 0;
 }
 
 ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
 h1,
@@ -56,159 +77,167 @@ h4,
 h5,
 h6,
 p {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 img {
-    display: block;
+  display: block;
 }
 
 .sectionTitle {
-    position: relative;
+  position: relative;
+  width: 100%;
+  max-width: 450px;
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: 26px;
+    left: 0px;
+    
+    display: block;
     width: 100%;
-    max-width: 450px;
+    height: 2px;
+    border-radius: 25px;
+    background-color: var(--color-titles-section);
+  }
 
-    &::after {
-        content: '';
-        position: absolute;
-        top: 28px;
-        left: 0px;
-        bottom: 50%;
-        transform: translateY(50%);
-        display: block;
-        width: 100%;
-        height: 2px;
-        border-radius: 25px;
-        background-color: var(--color-titles-section);
-
-    }
-
-    font-family: var(--font-titles);
-    font-size: 18px;
-    color: var(--color-titles-section);
-    margin-bottom: 20px;
+  font-family: var(--font-titles);
+  font-size: 18px;
+  color: var(--color-titles-section);
+  margin-bottom: 15px;
 }
 
 .section {
-    width: 100%;
-    margin: 0 auto;
-    padding-top: 30px;
+  width: calc(100% - 10px);
+  margin: 0 auto;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  border-radius: 25px;
+  box-shadow: 3px 3px 5px 0px var(--color-shadow);
+  backdrop-filter: blur(1.5px);
+  background-color: var(--background-color-primary);
 }
 
 .container {
-    padding: 0px 10px;
-    margin: 0 auto;
+  padding: 10px 10px;
+  margin: 0 auto;
 }
 
-@media screen and (min-width:480px) {
-    body {
-        background-size: 480px 370px;
-    }
+@media screen and (min-width: 425px) {
+  body {
+    background-size: 425px 370px;
+  }
 
-    .section {
-        width: 480px;
-    }
+  .section {
+    width: 405px;
+  }
 }
 
 @media screen and (min-width: 768px) {
-    body {
-        background-size: 768px 520px;
-        font-size: 17px;
-    }
+  body {
+    background-size: 768px 520px;
+    font-size: 17px;
+  }
 
-    .sectionTitle {
-        max-width: 768px;
-        font-size: 24px;
-        margin-bottom: 25px;
+  .sectionTitle {
+    max-width: 718px;
+    font-size: 24px;
+    margin-bottom: 20px;
 
-        &::after {
-            top: 40px;
-        }
+    &::after {
+      top: 35px;
     }
+  }
 
-    .section {
-        width: 768px;
-        padding-top: 40px;
-    }
+  .section {
+    width: 738px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
 
-    .container {
-        width: 738px;
-        padding: 0px 15px;
-    }
+  .container {
+    padding: 15px 10px;
+  }
 }
 
-@media screen and (min-width:1000px) {
-    .section {
-        width: 1000px;
-        padding-top: 45px;
-    }
+@media screen and (min-width: 1024px) {
+  .section {
+    width: 984px;
+    margin-top: 25px;
+    margin-bottom: 25px;
+  }
 
-    .sectionTitle {
-        max-width: 1000px;
-        font-size: 26px;
-        margin-bottom: 30px;
+  .sectionTitle {
+    max-width: 964px;
+    font-size: 26px;
+    margin-bottom: 25px;
 
-        &::after {
-            top: 40px;
-        }
+    &::after {
+      top: 38px;
     }
+  }
 
-    .container {
-        width: 960px;
-        padding: 0px 20px;
-    }
+  .container {
+
+    padding: 20px 15px;
+  }
 }
 
-@media screen and (min-width: 1200px) {
-    body {
-        font-size: 20px;
-        line-height: 1.42;
-    }
+// @media screen and (min-width: 1200px) {
+//     body {
+//         font-size: 20px;
+//         line-height: 1.42;
+//     }
 
-    .section {
-        width: 1200px;
-        padding-top:50px;
-    }
+//     .section {
+//         width: 1200px;
+//         padding-top:50px;
+//     }
 
-    .container {
-        width: 1160px;
-    }
+//     .container {
+//         width: 1160px;
+//     }
 
-    .sectionTitle {
-        max-width: 1200px;
-        margin-bottom: 35px;
+//     .sectionTitle {
+//         max-width: 1200px;
+//         margin-bottom: 35px;
 
-        &::after {
-            top: 45px;
-        }
-    }
+//         &::after {
+//             top: 45px;
+//         }
+//     }
 
-}
+// }
 
 @media screen and (min-width: 1440px) {
-    body {
-        font-size: 22px;
-    }
+  body {
+    font-size: 22px;
+  }
 
-    .section {
-        width: 1440px;
-    }
+  .section {
+    width: 1400px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    // padding-top: 15px;
+    // padding-bottom: 15px;
+  
+  }
 
-    .sectionTitle {
-        max-width: 1440px;
-        font-size: 30px;
-        margin-bottom: 40px;
+  .sectionTitle {
+    max-width: 1370px;
+    font-size: 30px;
+    margin-bottom: 40px;
 
-        &::after {
-            top: 50px;
-        }
+    &::after {
+      top: 45px;
     }
+  }
 
-    .container {
-        width: 1390px;
-        padding: 0px 25px;
-    }
+  .container {
+    padding: 25px 20px;
+  }
 }
 
 // .current {
@@ -229,7 +258,6 @@ img {
 //     }
 
 // }
-
 
 // @media screen and (min-width:1000px) {
 //     .current {
